crates/kernel/tests/table/snapshots/main__table__router__search_typing_reranks_and_backspace_widens_it_back.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 414
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                Search,
            ),
        ),
        One(
            Animate(
                OverlayOpened,
            ),
        ),
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 3,
                    },
                    content: SearchQuery {
                        input: "",
                        matches: [
                            0,
                            1,
                            2,
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Overlay(
            Search(
                Edit(
                    Char(
                        'm',
                    ),
                ),
            ),
        ),
        None,
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 3,
                    },
                    content: SearchQuery {
                        input: "m",
                        matches: [
                            0,
                            2,
                            1,
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Overlay(
            Search(
                Edit(
                    Char(
                        'o',
                    ),
                ),
            ),
        ),
        None,
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 3,
                    },
                    content: SearchQuery {
                        input: "mo",
                        matches: [
                            0,
                            2,
                            1,
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Overlay(
            Search(
                Edit(
                    Char(
                        'o',
                    ),
                ),
            ),
        ),
        None,
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 2,
                    },
                    content: SearchQuery {
                        input: "moo",
                        matches: [
                            0,
                            2,
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Overlay(
            Search(
                Edit(
                    Char(
                        'n',
                    ),
                ),
            ),
        ),
        None,
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 2,
                    },
                    content: SearchQuery {
                        input: "moon",
                        matches: [
                            0,
                            2,
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Overlay(
            Search(
                Edit(
                    Backspace,
                ),
            ),
        ),
        None,
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 2,
                    },
                    content: SearchQuery {
                        input: "moo",
                        matches: [
                            0,
                            2,
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Overlay(
            Search(
                Edit(
                    Backspace,
                ),
            ),
        ),
        None,
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 3,
                    },
                    content: SearchQuery {
                        input: "mo",
                        matches: [
                            0,
                            2,
                            1,
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Overlay(
            Search(
                Edit(
                    Backspace,
                ),
            ),
        ),
        None,
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 3,
                    },
                    content: SearchQuery {
                        input: "m",
                        matches: [
                            0,
                            2,
                            1,
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
    (
        Overlay(
            Search(
                Edit(
                    Backspace,
                ),
            ),
        ),
        None,
        Stopped,
        Some(
            Search(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 3,
                    },
                    content: SearchQuery {
                        input: "",
                        matches: [
                            0,
                            1,
                            2,
                        ],
                    },
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 3,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            output: Ready,
        },
        None,
    ),
]
