crates/kernel/tests/table/snapshots/main__table__router__settings_closes_like_every_other_overlay.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                Settings,
            ),
        ),
        [
            Animate(
                OverlayOpened,
            ),
        ],
        Stopped,
        Some(
            Settings(
                Theme,
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Close,
        ),
        [
            Animate(
                OverlayClosed,
            ),
        ],
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
