crates/kernel/tests/table/snapshots/main__table__router__shuffle_without_an_order_advances_linearly.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Audio(
            Ended,
        ),
        [
            Audio(
                Load(
                    TrackLoad {
                        path: "/tmp/track1.flac",
                        gain: None,
                        revision: Revision(
                            1,
                        ),
                    },
                ),
            ),
            Library(
                AppendHistory(
                    HistoryEntry {
                        track: Local(
                            "/tmp/track1.flac",
                        ),
                        title: "track1",
                        artist: None,
                        at: Moment(
                            0ns,
                        ),
                    },
                ),
            ),
            Macos(
                NowPlaying(
                    Some(
                        Track {
                            source: Local(
                                "/tmp/track1.flac",
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate_kbps: None,
                                sample_rate_hz: None,
                                bits_per_sample: None,
                                channels: None,
                                replay_gain: None,
                            },
                            display: "track1.flac",
                            tagging: Read(
                                100s,
                            ),
                        },
                    ),
                ),
            ),
            Audio(
                Playback(
                    Playing,
                ),
            ),
            Macos(
                SetPlayback(
                    Playing,
                ),
            ),
            Animate(
                TrackChanged,
            ),
            Animate(
                PlaybackChanged(
                    Play,
                ),
            ),
            RollShuffle(
                4,
            ),
        ],
        Loading {
            track: Track {
                source: Local(
                    "/tmp/track1.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track1.flac",
                tagging: Read(
                    100s,
                ),
            },
            at: 0ns,
        },
        None,
        Cursor {
            index: 1,
            len: 4,
        },
        Cursor {
            index: 1,
            len: 4,
        },
        [],
        Off,
        ShufflePending,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
