crates/kernel/tests/table/snapshots/main__table__router__shuffle_wraps_at_the_end_of_its_order_with_repeat_off.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 414
expression: "walked(model, messages)"
---
[
    (
        Playback(
            Next,
        ),
        Batch(
            [
                Audio(
                    Stop,
                ),
                Audio(
                    Load {
                        path: "/tmp/track2.flac",
                        gain: None,
                        revision: Revision(
                            1,
                        ),
                    },
                ),
                Audio(
                    Volume(
                        Percent(
                            50,
                        ),
                    ),
                ),
                Library(
                    AppendHistory {
                        track: Track {
                            path: "/tmp/track2.flac",
                            duration: Some(
                                100s,
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate_kbps: None,
                                sample_rate_hz: None,
                                bits_per_sample: None,
                                channels: None,
                                replay_gain: None,
                            },
                            display: "track2.flac",
                            tagging: Read,
                        },
                        at: UnixSeconds(
                            0,
                        ),
                    },
                ),
                System(
                    NowPlaying(
                        Track {
                            title: "track2",
                            artist: None,
                            album: None,
                            duration: 100s,
                            path: "/tmp/track2.flac",
                        },
                    ),
                ),
                Audio(
                    Pause(
                        Playing,
                    ),
                ),
                System(
                    PlaybackState(
                        Playing,
                    ),
                ),
                Animate(
                    TrackChanged,
                ),
                Animate(
                    PlaybackChanged(
                        Play,
                    ),
                ),
            ],
        ),
        Loading {
            track: Track {
                path: "/tmp/track2.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track2.flac",
                tagging: Read,
            },
            at: 0ns,
        },
        None,
        Cursor {
            index: 2,
            len: 4,
        },
        Cursor {
            index: 2,
            len: 4,
        },
        [],
        Off,
        Shuffle(
            [
                2,
                0,
                3,
                1,
            ],
        ),
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            preload_lead: 10s,
            output: Ready,
        },
        None,
    ),
]
