crates/kernel/tests/table/snapshots/main__table__router__stepping_speed_down_steps.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Playback(
            StepSpeed(
                Previous,
            ),
        ),
        [
            Audio(
                SetSpeed(
                    Speed(
                        0.75,
                    ),
                ),
            ),
        ],
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                0.75,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
